<resources>
    <string name="str">Sterilization</string>
    <string name="IUCDCU"> IUCDCU User</string>
    <string name="app_name">mSakhi</string>
    <string name="app_name1">mSakhi 6.1.8</string>
    <string name="Visitdatelmp">Visit date must be greater than LMP date</string>
    <string name="mustbegreater"> must be greater than atleast a month from previous Visit date </string>
    <string name="login">Login</string>
    <string name="FamilyMemberStatus">Family Member Status</string>
    <string name="saveque">Do You Want To Save?</string>
    <string name="yes">Yes</string>
    <string name="agefamily">Age</string>
    <string name="villagename1"> Enter village name </string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="other">Other</string>
    <string name="no">No</string>
    <string name="enterdob">Enter Date Of Birth</string>
    <string name="entervaliddate">Date cannot be future date</string>
    <string name="enter12digituid">Enter 12 digit Aadhar Number</string>
    <string name="HHstatus">Household Status</string>
    <string name="totalcountfm">Total Family Members</string>
    <string name="totalchild">Total children</string>
    <string name="totalcountwomen">Total no. of women</string>
    <string name="totalcountfamily">Total Families </string>
    <string name="totalcountfamilymember">Total number of  members </string>
    <string name="totalcountPwomen"> Total no. of pregnant women </string>
    <string name="totalcount">Total count</string>
    <string name="validdatead">Date of Abortion must be greater than LMP date</string>
    <string name="validdatesb">Date of still birth must be greater than LMP date</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="pregnantwomen">Pregnant Woman</string>
    <string name="editdata">Update Information</string>
    <string name="migrated">Migration form</string>
    <string name="Migrated">Migrated</string>
    <string name="Death">Death</string>
    <string name="Dead">Dead form</string>
    <string name="migrateout">Are you wanted migrate out this case from your catchment?</string>
    <string name="migratein">Are you wanted migrate in this case to your catchment?</string>
    <string name="Deadmsg">Are you sure that you wanted file death register of this person?</string>
    <string name="addpregnantwomen">Add Pregnancy</string>
    <string name="eligiblecouple">Eligible Couple</string>
    <string name="signin">Sign In</string>
    <string name="survey">Survey</string>
    <string name="synchronization">Synchronization</string>
    <string name="search">Search</string>
    <string name="alreadymethodadopted">already family planning method adopted</string>
    <string name="services">Family member information</string>
    <string name="add">Add</string>
    <string name="familyId">HH Code</string>
    <string name="HH_Head">HH Head</string>
    <string name="familymember">Family Member</string>
    <string name="regdate">Reg Date</string>
    <string name="save">Save</string>
    <string name="next">Next</string>
    <string name="save_ver">Save/Verified</string>
    <string name="close">Close</string>
    <string name="SubCenter">Sub Center Name</string>
    <string name="ANMname">ANM Name </string>
    <string name="VillageName">Village Name  </string>
    <string name="ASHAname">ASHA Name</string>
    <string name="FamilySNo">Family SNo.</string>
    <string name="SNoFamily">SNo. in Family</string>
    <string name="FamilyMemb">Name</string>
    <string name="Relation">Relation</string>
    <string name="Reason">Reason</string>
    <string name="UID">Unique Identification Number(Aadhar Number)</string>
    <string name="MaritalStatus">Marital Status</string>
    <string name="Gender">Gender</string>
    <string name="Caste">Caste</string>
    <string name="FinancialStatus">Financial Status</string>
    <string name="DOBAvailable">DOB Available</string>
    <string name="AgeAsOnYear">Age As On Year</string>
    <string name="DateOfBirth">Date Of Birth</string>
    <string name="DateOfReturn">Migrate in-date </string>
    <string name="IFA">IFA</string>
    <string name="calcium1">Calcium</string>
    <string name="HRP1">HRP</string>
    <string name="visit">Visit</string>
    <string name="DateOfMigrate">Migrate out-date</string>
    <string name="AgeYearsTillApril">Age </string>
    <string name="AgeMonthTillApril">Age (In Months)</string>
    <string name="MotherName">Mother Name</string>
    <string name="MotherName1">Mother Name</string>
    <string name="Target">Target</string>
    <string name="FamilyDetails">Family Details</string>
    <string name="HouseholdDetails">Household Details</string>
    <string name="familyindex">Family Details</string>
    <string name="savesuccessfully">Saved Successfully.</string>
    <string name="savesuccessfully_verify">Saved and Verfied Successfully.</string>
    <string name="ok">OK</string>
    <string name="wantadd">Do you want to add new HouseHold ?</string>
    <string name="wantaddmember">Do you want to add new member?</string>
    <string name="DownloadMaster">Download Master</string>
    <string name="DownloadData">Download Data</string>
    <string name="UploadData">Upload Data</string>
    <string name="ReligionID">Religion</string>
    <string name="HHShortName">HH Name</string>
    <string name="facilator">Asha facilitator</string>
    <string name="sFathername">Father’s Name</string>
    <string name="sMothername">Mother’s Name</string>
    <string name="sspousename">Husband Name</string>
    <string name="sspousename2">Wife Name</string>
    <string name="Familymemberheading">Relationship Mapping</string>
    <string name="Familymembershowheading">Mapped Relation</string>
    <string name="tapTextScreen">Please click on colored name for relationship</string>
    <string name="pregnantwomenname">Pregnant woman name</string>
    <string name="mctsid">MCTS ID</string>
    <string name="lmp">LMP date</string>
    <string name="deathdate">Date of death</string>
    <string name="deathsite">Site of death</string>
    <string name="deathvillage">Died in this village?</string>
    <string name="deathvillagename">Name of village</string>
    <string name="edd">Estimated date of delivery</string>
    <string name="dor">Date of Registration</string>
    <string name="edu">Education</string>
    <string name="wofpg">Registered within 12 weeks of pregnancy</string>
    <string name="reg_weeks_elaspsed">No. of weeks of pregnancy at the time of registration</string>
    <string name="mobile_no">Mobile no.</string>
    <string name="alternativemobile_no">Alternative Mobile no.</string>
    <string name="Acn">Aadhar card no</string>
    <string name="bank_code">Bank code</string>
    <string name="bank_accno">Bank account no</string>
    <string name="ifsccode">IFSC code</string>
    <string name="branch_code">Branch code</string>
    <string name="benficiary">JSY benificiary</string>
    <string name="payrcvd">Payment Received</string>
    <string name="age">Age of pregnant woman</string>
    <string name="pw_age_ref_dt">pw_age_ref_dt </string>
    <string name="wopg">Weight of PW (KG) </string>
    <string name="hopg">Height of PW (in cm) </string>
    <string name="bldgofpw">Blood group of PW </string>
    <string name="PastIllness">Present/Past illness</string>
    <string name="noofpregnancy">Obstetric history</string>
    <string name="LastPreg">Last preg complications</string>
    <string name="LastPregoutcome">Last preg outcome of pregnancy</string>
    <string name="LastPregplace">Last preg delivery place</string>
    <string name="LasttoLastPreg">Last to last preg complications</string>
    <string name="LasttoLastPregoutcome">Last to last preg outcome of pregnancy</string>
    <string name="LasttoLastPregplace">Last to last preg delivery place</string>
    <string name="facilityfordelivery">Expected place and facility for delivery</string>
    <string name="namefacilityfordelivery">Expected place and name of facility for delivery</string>
    <string name="VDRL">VDRL test </string>
    <string name="VDRLresult">VDRL (RPR) test result</string>
    <string name="HIV">HIV screening test </string>
    <string name="HIVresult">HIV screening test result </string>
    <string name="firstdov">First date of visit </string>
    <string name="seconddov">Second date of visit </string>
    <string name="thirddov">Third date of visit </string>
    <string name="fourthdov">Fourth date of visit </string>
    <string name="Abortion">Abortion  </string>
    <string name="Abortiontype">Abortion facility type  </string>
    <string name="husbandname">Husband name </string>
    <string name="noancvisit">No. of ANC Visit  </string>
    <string name="lastancvisitdate"> Last ANC visit date</string>
    <string name="ttdosefirst">First  TT dose (Date)</string>
    <string name="ttdosescond">Second  TT dose (Date)</string>
    <string name="ttdosebooster">Booster  TT dose (Date)</string>
    <string name="danger_sign">Any symptom of high risk </string>
    <string name="referral_facility">Referral facility </string>
    <string name="Datetime">Date and time (HH:MM) of delivery </string>
    <string name="placeofdelivery">Place of delivery  </string>
    <string name="placeofcheckup">Place of checkup  </string>
    <string name="conducteddelivery">Who conducted delivery</string>
    <string name="TypeofDeliver">Type of deliver </string>
    <string name="ComplicationDuringDelivery">Complication during delivery </string>
    <string name="Outcomeofdelivery">Outcome of delivery </string>
    <string name="discharge">Date and time of discharge  </string>
    <string name="ancPregnant">ANC </string>
    <string name="immunized">Immunization(upto 14 year)</string>
    <string name="rd">Report/Dashboard</string>
    <string name="homevisit">Home Visit</string>
    <string name="iycf">IYCF</string>
    <string name="pregnantwomensrch">Woman Name</string>
    <string name="captureimage">Capture Image</string>
    <string name="mcts">MCTS ID (child)</string>
    <string name="mctsm">MCTS ID (Mother)</string>
    <string name="weight">Weight at the time of birth (in Kg)</string>
    <string name="weight1">Weight (in Kg) </string>
    <string name="birthPlace">Place of birth</string>
    <string name="childname">Child name</string>
    <string name="childname1">Mother’s Name / Child Name</string>
    <string name="childgender">Gender</string>
    <string name="opb"> OPB</string>
    <string name="bcg"> BCG</string>
    <string name="dpt"> DPT</string>
    <string name="hep"> Hep.B</string>
    <string name="vaccination">Vaccination at birth</string>
    <string name="Delivery">Delivery</string>
    <string name="Livebirth">Live birth</string>
    <string name="Stillbirth">Stillbirth</string>
    <string name="Neonataldeath">Neonatal death</string>
    <string name="clear">Clear</string>
    <string name="cancel">Cancel</string>
    <string name="set">Set</string>
    <string name="SLNo">SL No.</string>
    <string name="AddVHND">Add VHND</string>
    <string name="Edit">Edit</string>
    <string name="Date">Date</string>
    <string name="AddPerform">Add Performance</string>
    <string name="VHNDDueList">VHND Due list</string>
    <string name="VHNDPerformance">VHND Performance</string>
    <string name="Year">Year</string>
    <string name="Duelist">Due list</string>
    <string name="Medicines">Medicines</string>
    <string name="month">Month</string>
    <string name="m">M</string>
    <string name="status">Status</string>
    <string name="Quantity">Quantity</string>
    <string name="y">Y</string>
    <string name="claim">Claim</string>
    <string name="amount_recieved">Amount Recieved</string>
    <string name="claimed">Claimed</string>
    <string name="not_approved">Not approved</string>
    <string name="pending">pending</string>
</resources>