<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/VHNDPerformance_txt"
        style="@style/SimpleTextblack"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/VHNDPerformance" />

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="45dp" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight=".1" />

        <Button
            android:id="@+id/btnduelist"
            style="@style/ButtonText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2.5"
            android:background="@drawable/btn_bg_custom"
            android:gravity="center"
            android:text="@string/VHNDDueList" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight=".5" />

        <LinearLayout
            android:id="@+id/Addbtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3" >

            <ImageView
                style="@style/ButtonText"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:gravity="center"
                android:src="@drawable/addicon" />

            <TextView
                style="@style/CustomTheme"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/AddVHND" />
        </LinearLayout>

        <TextView
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight=".1" />
    </TableRow>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="5dp" />

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="50dp" >

        <TextView
            style="@style/Textview"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight=".3"
            android:background="@drawable/textsheet"
            android:gravity="center"
            android:text="@string/SLNo"
            android:textColor="@color/White" />

        <TextView
            style="@style/Textview"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/textsheet"
            android:gravity="center"
            android:text="@string/VillageName"
            android:textColor="@color/White" />

        <TextView
            style="@style/Textview"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/textsheet"
            android:gravity="center"
            android:text="@string/Date"
            android:textColor="@color/White" />

        <TextView
            android:id="@+id/AddPerformm"
            style="@style/Textview"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/textsheet"
            android:gravity="center"
            android:text="@string/AddPerform"
            android:textColor="@color/White" />

        <TextView
            style="@style/Textview"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/textsheet"
            android:gravity="center"
            android:text="@string/Edit"
            android:textColor="@color/White" />
    </TableRow>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="600dp"
            android:layout_margin="3dp"
            android:orientation="vertical"
            android:scrollbars="vertical" >

            <GridView
                android:id="@+id/VHND_rcrd_grid"
                android:layout_width="fill_parent"
                android:layout_height="400dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:numColumns="1"
                android:scrollbarFadeDuration="0"
                android:scrollbarStyle="insideOverlay"
                android:scrollbars="vertical"
                android:smoothScrollbar="true" >
            </GridView>
        </LinearLayout>
    </ScrollView>

</LinearLayout>