<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/VHNDPerformance_txt"
        style="@style/SimpleTextblack"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/VHNDDueList"
        android:textSize="22dp" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="5dp" />

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="50dp" >

        <TextView
            style="@style/Textview"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/textsheet"
            android:gravity="center"
            android:text="@string/VillageName"
            android:textColor="@color/White" />

        <TextView
            style="@style/Textview"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/textsheet"
            android:gravity="center"
            android:text="@string/Date"
            android:textColor="@color/White" />

        <TextView
            android:id="@+id/AddPerformm"
            style="@style/Textview"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/textsheet"
            android:gravity="center"
            android:text="@string/AddPerform"
            android:textColor="@color/White" />

        <TextView
            style="@style/Textview"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/textsheet"
            android:gravity="center"
            android:text="@string/Duelist"
            android:textColor="@color/White" />
    </TableRow>

 

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:orientation="vertical"
            android:scrollbars="vertical" >

            <GridView
                android:id="@+id/VHND_rcrd_grid"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:numColumns="1"
                android:scrollbarFadeDuration="0"
                android:scrollbarStyle="insideOverlay"
                android:scrollbars="vertical"
                android:smoothScrollbar="true" >
            </GridView>
        </LinearLayout>
  

</LinearLayout>