<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
  android:background="@drawable/headingtext"
    android:orientation="vertical" xmlns:tools="http://schemas.android.com/tools">

    <TimePicker
        android:id="@+id/idfortime"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp" >

        <Button
            android:id="@+id/set"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/set"
            android:textSize="15sp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/clear"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/clear"
            android:textSize="15sp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/cancel"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textSize="15sp"
            tools:ignore="ButtonStyle" />

    </TableRow>

</LinearLayout>