<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/WhiteSmoke"
    android:orientation="vertical">

    <DatePicker
        android:id="@+id/idfordate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:calendarViewShown="false" />

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp">

        <Button
            android:id="@+id/set"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/button"
            android:text="@string/set"
            android:textColor="@color/White" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight=".1"
            android:visibility="invisible" />

        <Button
            android:id="@+id/clear"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/button"
            android:text="@string/clear"
            android:textColor="@color/White" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight=".1"
            android:visibility="invisible" />


        <Button
            android:id="@+id/cancle"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/button"
            android:text="@string/cancel"
            android:textColor="@color/White" />


    </TableRow>

</LinearLayout>